--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.40.0",
     "react-loaders": "^3.0.1",
+    "react-moment": "^1.1.2",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-select-country-list": "^2.2.3",
