--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "loaders.css": "^0.1.2",
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.40.0",
